# RAIT-ACM-Kopiko

./: .gitignore  README.md  project.md  services.md
backend/: README.md  api_reference.md  config.py  data_prep.py  features.py  inference.py  main.py  pyproject.toml  requirements.txt  train.py
backend/controllers/: groundwater.py  health.py  llm.py  location.py  mandi.py  soil.py  weather.py
backend/data/: CGWB_dataset_CLEANED.csv  cleaned_market_data.parquet  crop_water_requirements.json  feature_engineered_data.parquet  le_commodity.joblib  le_state.joblib  mandi_model.joblib  migration.sql  msp_kharif.csv  seed.py  unique_commodities.txt
backend/models/: encoders.pkl  groundwater.py  location.py  mandi.py  weather.py
backend/routes/: __init__.py  aggregator.py  groundwater.py  health.py  llm.py  location.py  mandi.py  mandi_predict.py  soil.py  weather.py
backend/services/: __init__.py  aggregator.py  gemini_audio.py  groundwater.py  groundwater_ml.py  health.py  llm.py  location.py  mandi.py  soil.py  weather.py
files/: cmdt-data.json  cmdt-group-data.json  district-data.json  grade-data.json  market-data.json  state-data.json  variety-data.json
kopiko/: .env.example  nuxt.config.ts  package-lock.json  package.json
kopiko/app/: app.vue
kopiko/app/assets/css/: main.css
kopiko/app/components/: DashboardCards.vue
kopiko/app/utils/: gemini.ts
