[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "google-genai>=2.9.0",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "sarvamai>=0.1.28",
    "requests>=2.34.2",
    "supabase>=2.31.0",
    "twilio>=9.10.9",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.9.0",
    "pyarrow>=24.0.0",
    "kaggle>=2.2.2",
    "joblib>=1.5.3",
]
